<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>trace-etl</artifactId>
        <groupId>run.mone</groupId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>trace-etl-server</artifactId>


    <dependencies>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.13.5</version>
        </dependency>

        <dependency>
            <artifactId>trace-etl-service</artifactId>
            <groupId>run.mone</groupId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>


        <dependency>
            <groupId>com.squareup.okio</groupId>
            <artifactId>okio</artifactId>
            <version>3.5.0</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>run.mone</groupId>
            <artifactId>docean-spring-starter</artifactId>
            <version>1.4-SNAPSHOT</version>
        </dependency>


        <dependency>
            <groupId>run.mone</groupId>
            <artifactId>docean</artifactId>
            <version>1.4-java20-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>run.mone</groupId>
            <artifactId>docean-plugin-spring</artifactId>
            <version>1.4-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>run.mone</groupId>
            <artifactId>trace-etl-rocketmq-extension</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>


    </dependencies>


    <build>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/resources/META-INF</directory>
                <filtering>true</filtering>
                <includes>
                    <include>app.properties</include>
                </includes>
                <targetPath>META-INF/</targetPath>
            </resource>
        </resources>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-modules=jdk.incubator.concurrent</arg>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                    <compilerVersion>20</compilerVersion>
                    <source>20</source>
                    <target>20</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>2.7.5</version>
                <configuration>
                    <mainClass>com.xiaomi.hera.trace.etl.bootstrap.TraceEtlBootstrap</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>

    </build>

    <profiles>

        <profile>
            <id>opensource-outer</id>
            <properties>
                <profiles.active>opensource-outer</profiles.active>
            </properties>
            <build>
                <filters>
                    <filter>src/main/resources/config/opensource-outer.properties</filter>
                </filters>
            </build>
        </profile>

    </profiles>


</project>